objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Practice_Specialties__c</fullName>
        <label>Practice Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Internal/Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Geriatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Hospitalist</fullName>
                </value>
                <value>
                    <fullName>Medical Oncology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Obstetrics/Gynecology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pediatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Multi-Specialty</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>Infectious Diseases</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>Pain Management</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Urgent Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_First_Name_Nickname__c</fullName>
        <inlineHelpText>Enter nickname or preferred name.</inlineHelpText>
        <label>Preferred First Name/Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer__c</fullName>
        <label>Previous Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_of_Interest_POI_c__c</fullName>
        <inlineHelpText>Product(s) of Interest. Either assumed based on activity or self proclaimed initially. Sales can and will modify throughout the funnel stages.</inlineHelpText>
        <label>Product(s) Of Interest (POI)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesia-Coding</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-PM</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-RCM</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-Coding</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-PM</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-RCM</fullName>
                </value>
                <value>
                    <fullName>EMS-Optima Live</fullName>
                </value>
                <value>
                    <fullName>EMS-Optima Predict</fullName>
                </value>
                <value>
                    <fullName>EMS-RCM</fullName>
                </value>
                <value>
                    <fullName>EMS-TripTix</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-Coding</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-PM</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-RCM</fullName>
                </value>
                <value>
                    <fullName>IDN-Business Office</fullName>
                </value>
                <value>
                    <fullName>IDN-Coding Management</fullName>
                </value>
                <value>
                    <fullName>IDN-Patient Access</fullName>
                </value>
                <value>
                    <fullName>IDN-Physician Advisory</fullName>
                </value>
                <value>
                    <fullName>IDN-RCM-CoManaged</fullName>
                </value>
                <value>
                    <fullName>IDN-RCM-Full Operating</fullName>
                </value>
                <value>
                    <fullName>IDN-Revenue Integrity</fullName>
                </value>
                <value>
                    <fullName>OfficeBased-PM</fullName>
                </value>
                <value>
                    <fullName>OfficeBased-RCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCM_Solution__c</fullName>
        <label>RCM Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Hospital Network</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_Candidate_Email__c</fullName>
        <label>Email (Recruiting)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>R_Candidate_Status__c</fullName>
        <description>for Talent Acq team - status of candidate</description>
        <label>Candidate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Lead</fullName>
                    <default>true</default>
                    <label>New Lead</label>
                </value>
                <value>
                    <fullName>Recruiter Review</fullName>
                </value>
                <value>
                    <fullName>Follow-up 30-60</fullName>
                </value>
                <value>
                    <fullName>Follow-up 60-90</fullName>
                </value>
                <value>
                    <fullName>Follow-up 90-180</fullName>
                </value>
                <value>
                    <fullName>Long term follow up</fullName>
                </value>
                <value>
                    <fullName>Currently Interviewing</fullName>
                </value>
                <value>
                    <fullName>Do not contact</fullName>
                </value>
                <value>
                    <fullName>Not eligible for rehire</fullName>
                </value>
                <value>
                    <fullName>Hired-R1 employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_Employer_Info__c</fullName>
        <label>Employer Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R_Event_Attended__c</fullName>
        <label>Event Attended</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campus Job Fair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_Graduation_Date__c</fullName>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_Phonescreen_Date__c</fullName>
        <label>Phone Screen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_Preferred_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Location</label>
        <referenceTo>Recruiting_Hub__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_RecruitingEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiting Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Recruiting_Event__c.Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Recruiting_Event__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_Salary_Range__c</fullName>
        <label>Salary Range</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Employee_Pay_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20-30K</fullName>
                </value>
                <value>
                    <fullName>30-40K</fullName>
                </value>
                <value>
                    <fullName>40-50K</fullName>
                </value>
                <value>
                    <fullName>50-60K</fullName>
                </value>
                <value>
                    <fullName>60-70K</fullName>
                </value>
                <value>
                    <fullName>70-80K</fullName>
                </value>
                <value>
                    <fullName>80-90K</fullName>
                </value>
                <value>
                    <fullName>90-100K</fullName>
                </value>
                <value>
                    <fullName>100-125K</fullName>
                </value>
                <value>
                    <fullName>125-150K</fullName>
                </value>
                <value>
                    <fullName>150K+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_University_Grad__c</fullName>
        <label>University - Grad</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_University__c</fullName>
        <label>University - Undergrad</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Willing_to_Relocate__c</fullName>
        <label>Willing to Relocate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_Work__c</fullName>
        <label>Remote Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open to Remote</fullName>
                    <default>true</default>
                    <label>Open to Remote</label>
                </value>
                <value>
                    <fullName>Not an Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCR_Date__c</fullName>
        <label>SCR_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Call_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that a Sales Call has been requested. Typically via a form. Activity will be created and assigned to the contact owner.</inlineHelpText>
        <label>Sales Call Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Recruiting_Hub__c.Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Recruiting_Hub__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Location)</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A valid Mailing State forces population of this linkage field for access to all State/Province related data fields</description>
        <label>State/Province</label>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Review</fullName>
                    <default>true</default>
                    <label>Under Review</label>
                </value>
                <value>
                    <fullName>Not a Fit</fullName>
                </value>
                <value>
                    <fullName>Offer Pending</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength_of_Internal_Contact_1__c</fullName>
        <label>Strength of Internal Contact 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength_of_Internal_Contact_2__c</fullName>
        <label>Strength of Internal Contact 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Priorities__c</fullName>
        <description>Collected by Marketing on a Form. Top Priorities Selected by the Prospect.</description>
        <inlineHelpText>Prospects top Priorities in next 12-18 months</inlineHelpText>
        <label>Top Priorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deploying automation to reduce the cost of business operations</fullName>
                </value>
                <value>
                    <fullName>Deploying automation to the revenue cycle process</fullName>
                </value>
                <value>
                    <fullName>Improving payments and patient experience</fullName>
                </value>
                <value>
                    <fullName>Improving revenue integrity</fullName>
                </value>
                <value>
                    <fullName>Improving the patient experience</fullName>
                </value>
                <value>
                    <fullName>Integrating acute and physician revenue cycles</fullName>
                </value>
                <value>
                    <fullName>Integrating acute and physician revenue cycles to align with value-based care</fullName>
                </value>
                <value>
                    <fullName>Providing financial options to patients</fullName>
                </value>
                <value>
                    <fullName>Providing pre-service estimates of patient costs</fullName>
                </value>
                <value>
                    <fullName>Reducing denial rates</fullName>
                </value>
                <value>
                    <fullName>Reducing denial rates and improving revenue integrity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Prospect__c</fullName>
        <inlineHelpText>Selected leads and contacts for marketing Top Prospect lists</inlineHelpText>
        <label>Top Prospect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office-Based</fullName>
                </value>
                <value>
                    <fullName>ED/Hospitalist</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>IDN Modular</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Optima</fullName>
                </value>
                <value>
                    <fullName>End to End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transport_Mix__c</fullName>
        <label>Transport Mix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mostly 911 Emergency Transports</fullName>
                </value>
                <value>
                    <fullName>Mostly Non-Emergency Transports</fullName>
                </value>
                <value>
                    <fullName>Mix of 911 Emergency and Non-Emergency Transports</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Preference__c</fullName>
        <label>Travel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>up to 100%</fullName>
                </value>
                <value>
                    <fullName>up to 75%</fullName>
                </value>
                <value>
                    <fullName>up to 50%</fullName>
                </value>
                <value>
                    <fullName>up to 25%</fullName>
                </value>
                <value>
                    <fullName>No Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Physicians</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>callbackdate__c</fullName>
        <formula>case (R_Candidate_Status__c, "Follow-up 30-60", Candidate_Status_Date__c+45, "Follow-up 60-90", Candidate_Status_Date__c+75, "Follow-up 90-180", Candidate_Status_Date__c+120,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Call Back Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>Vertical__c</columns>
        <columns>Organization_Type__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.Recruiting</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Converted_from_Lead</fullName>
        <columns>Lead_Status__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>Funnel_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Converted_from_Lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Converted from Lead</label>
    </listViews>
    <listViews>
        <fullName>Dennis_Campaign_contacts</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Role__c</field>
            <operation>equals</operation>
            <value>CFO</value>
        </filters>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>contains</operation>
            <value>Finance</value>
        </filters>
        <label>Dennis Campaign contacts</label>
    </listViews>
    <listViews>
        <fullName>Engagement_Scores</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Eng_Score_with_Graphic__c</columns>
        <columns>Eng_Change__c</columns>
        <columns>Marketing_qualified_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Eng_Change__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Eng_Change__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Engagement Score Changes Last 30</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.DO_NOT_CALL</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <columns>No_Longer_with_Company__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_Sales_Call_Requested</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.DO_NOT_CALL</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <columns>No_Longer_with_Company__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Sales_Call_Requested__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contacts - Sales Call Requested</label>
    </listViews>
    <listViews>
        <fullName>My_Key_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Key_Contact__c</columns>
        <columns>IsKeyContact__c</columns>
        <columns>Is_in_Sprint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsKeyContact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Key Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Targeted_ABM_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Key_Contact__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Engagement_Score__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>Outcome_Status__c</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Marketing_qualified_lead__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.Recruiting</value>
        </filters>
        <filters>
            <field>Key_Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Targeted ABM Contacts</label>
    </listViews>
    <listViews>
        <fullName>Optima_Live_contacts</fullName>
        <columns>Optima_Customer_Code__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>includes</operation>
            <value>Optima Live Contact</value>
        </filters>
        <filters>
            <field>Optima_Customer_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Optima Live contacts</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Predict_contacts</fullName>
        <columns>Optima_Customer_Code__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>includes</operation>
            <value>Optima Predict Contact</value>
        </filters>
        <filters>
            <field>Optima_Customer_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Optima Predict contacts</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_release_contacts</fullName>
        <columns>Optima_Customer_Code__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>includes</operation>
            <value>Optima Release Contact</value>
        </filters>
        <label>Optima release contacts</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecruitingContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>R_Candidate_Email__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Recruiting,Contact.Recruiting_Candidate</value>
        </filters>
        <label>Recruiting</label>
        <sharedTo>
            <role>Recruiting</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Talent_Acq_with_Modification_Date</fullName>
        <columns>FULL_NAME</columns>
        <columns>Employer_Name__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>R_Candidate_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Talent_Acquisition</value>
        </filters>
        <label>Talent Acq with Modification Date</label>
        <sharedTo>
            <roleAndSubordinates>TA_Visibility</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Talent_Acquisistion</fullName>
        <columns>FULL_NAME</columns>
        <columns>Employer_Name__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Candidate_Skills__c</columns>
        <columns>R_Candidate_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Talent_Acquisition</value>
        </filters>
        <label>Talent Acquisition Contacts</label>
        <sharedTo>
            <roleAndSubordinates>TA_Visibility</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>false</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_R1</fullName>
        <active>true</active>
        <label>Internal R1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiting</fullName>
        <active>true</active>
        <description>for all non-candidate contacts for Recruiting</description>
        <label>University - Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiting_Candidate</fullName>
        <active>true</active>
        <label>University Candidate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Talent_Acquisition</fullName>
        <active>true</active>
        <label>Talent Acquisition</label>
    </recordTypes>
</CustomObject>